--- a/css/style.css
+++ b/css/style.css
@@ -269,10 +269,25 @@ a#flip_card_inner{
 
 /*for the portfolio page*/
 
+    /*not used since portfolio is not a pdf*/
 #portfoliopdf {
     margin-top: 2em;
     width: 100%;
     height: 100vh;
+}
+
+.portfolio_container{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    justify-content: center;
+   
+}
+
+.portfolio_container > img {
+    width: 75vw;
+    margin: 10px;
+    align-self: center;
 }
 
 
