--- a/css/style.css
+++ b/css/style.css
@@ -253,8 +253,18 @@ a#flip_card_inner{
 }
 
 /*for the about page*/
+
+/*not used because resume is not a pdf*/
 #resumepdf{
-    margin-top: 2em;
+   margin-top: 2em;
+   width:95%;
+   height: 100vh;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+#resumeimg{
+   margin-top: 2em;
    width:95%;
    height: 100vh;
    margin-left: auto;
